- NEW: The diff command is available in the explorer context menu
       for folders with property modifications. (Stefan)
- NEW: Repository browser shows svn:externals as sub-trees. (Stefan Fuhrmann)
- NEW: Improved filter in the log dialog. (Stefan)
- NEW: The state of the "hide unrelated changed paths" in the log
       dialog is remembered over sessions. (Stefan)

Version 1.6.6
- CHG: Reduced disk access in the status cache. (Stefan)
- BUG: The /url parameter was ignored for import commands. (Stefan)
- BUG: Some project properites were not automatically added
       to newly added folders. (Stefan)
- BUG: Resolving tree conflicts resulted in an error message. (Stefan)

Version 1.6.5
- BUG: fixed access to freed memory which could crash
       the 'resolve' command. (Stefan)
- BUG: Y coordinate in log statistics graph Repository had 
       inconsistent scaling. (Stefan Fuhrmann)
- BUG: the ssl certificate files weren't saved. (Stefan)
- BUG: The language for the dialogs was always in English on
       Win7 even if a language pack was installed and the
       language setting changed. (Stefan)
- BUG: Merging from an url which was renamed/deleted didn't work. (Stefan)
- BUG: The webviewer wasn't properly started from the lower pane
       in the log dialog for relative urls. (Stefan)

Version 1.6.4
- CHG: Improved startup performance of the log cache. (Stefan)
- CHG: The check state in the commit dialog is now preserved
       unconditionally after a failed commit. (Stefan)
- CHG: When marking files as resolved, only text files are now
       first checked for maybe still existing conflict markers. (Stefan)
- BUG: The export dialog showed the wrong url when exporting from
       the log dialog. (Stefan)
- BUG: The /fromurl parameter for the merge dialog was not used if the
       option "use wc url as from: url" was not set. (Stefan)
- BUG: In the log dialog, the context menu for a changed file could
       show the wrong item as the default action. (Stefan)